# github-starred-repositories

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  Taskfile.yml  prek.toml  pyproject.toml
.github/workflows/: ci.yml
starred/: analyze.py  cli.py  client.py  db.py  models.py  readme.py
tests/: conftest.py  test_analyze.py  test_client.py  test_db.py  test_readme.py
