[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-starred-repositories"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "claude-code-sdk>=0.0.25",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]

[project.scripts]
starred = "starred.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["starred"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.29",
    "types-tqdm>=4.67.3.20260408",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"starred/cli.py" = ["B006"]

[tool.ty]
python-version = "3.11"
